fixed long scroll issue on mobile for menu

--- a/css/main.css
+++ b/css/main.css
@@ -215,7 +215,7 @@ a:hover{
 }
 
 .videoBg{
-	position:fixed;
+	position:absolute;
 	top:0;
 	left:0;
 	width:100%;
